syntax = "proto3";
import "google/api/annotations.proto";
import "bucket.proto";
import "object.proto";
package pb;
service  GlusterStorageGateway {
    rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse){
        option (google.api.http) = {
            post: "/v1/createBucket"
            body: "*"
        };
    }

    rpc DeleteBucket(DeleteBucketRequest) returns (DeleteBucketResponse) {
        option (google.api.http) = {
            post: "/v1/deleteBucket"
            body: "*"
        };
    }

    rpc UpdateBucket(UpdateBucketRequest) returns (UpdateBucketResponse) {
        option (google.api.http) = {
            post: "/v1/updateBucket"
            body: "*"
        };
    }
    rpc PutObject(PutObjectRequest) returns (PutObjectResponse){
        option (google.api.http) = {
            post: "/v1/putObject"
            body: "*"
        };
    }

    rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse) {
        option (google.api.http) = {
            post: "/v1/deleteObject"
            body: "*"
        };
    }

    rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {
        option (google.api.http) = {
            post: "/v1/getObject"
            body: "*"
        };
    }
}